[package]
name = "listenmoe"
description = "Anime/Japanese Radio powered by LISTEN.moe!"
version = "0.1.1"
edition = "2021"

[features]
setup = ["dirs"]

[dependencies]
rodio = { version = "^0.21.1", default-features = false, features = ["playback"] }
symphonia = { version = "^0.5.5", features = ["ogg", "vorbis"] }
reqwest = { version = "^0.12", features = ["blocking"] }
gtk = { version = "^0.10", package = "gtk4", features = ["gnome_48"] }
adw = { version = "^0.8.0", package = "libadwaita", features = ["v1_8"] }
futures-util = { version = "^0.3.31", features = ["tokio-io"] }
rustls = "^0.23.35"
serde_json = "^1.0.145"
tokio = { version = "^1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "^0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "^0.7.17", features = ["io"] }
dirs = { version = "^6.0.0", optional = true}

[build-dependencies]
glib-build-tools = "^0.21.0"
