[package]
name = "listenmoe"
description = "J-POP and K-POP radio"
repository = "https://github.com/noobping/listenmoe"
homepage = "https://listen.moe/"
license = "MIT"
authors = ["noobping <hello@noobping.dev>"]
version = "1.0.11"
edition = "2021"

[package.metadata.winresource]
OriginalFilename = "listenmoe.exe"
LegalCopyright = "Copyright (c) 2025 noobping; Stream and metadata provided by LISTEN.moe."
ProductName = "LISTEN.moe"
FileDescription = "J-POP and K-POP radio"

[dependencies]
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
symphonia = { version = "0.5.5", features = ["ogg", "vorbis", "mp3"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_5"] }
serde_json = "1.0.148"
serde = { version = "1.0.228", features = ["derive"] }
tungstenite = { version = "0.28.0", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
gettext-rs = "0.7.7"
dirs-next = "2.0.0"
time = { version = "0.3.44", features = ["parsing"] }
rustfft = "6.4.1"
cairo-rs = "0.21.5"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server =  "0.9.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
glib-build-tools = "0.21.0"
winresource = "0.1.28"
